<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/total_name"
        android:textColor="@color/textColorLocation"
        android:textSize="36dp" />
    <LinearLayout
        android:id="@+id/numberOfCases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/headerTotal"
        android:padding="14dp">
        <LinearLayout
            android:layout_weight="1.15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalICases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/textColorLocation"
                android:textSize="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:text="@string/infected_name" />
        </LinearLayout>
        <TextView
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalDCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/textColorLocation"
                android:textSize="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:text="@string/d_name" />

        </LinearLayout>
        <TextView
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalRCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/textColorLocation"
                android:textSize="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:text="@string/recovered_name" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/global_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberOfCases"
        android:layout_marginLeft="12dp"
        android:text="@string/global_info"
        android:textColor="@color/textColorLocation" />


    <ListView
        android:id="@+id/list"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/global_text">

    </ListView>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@android:style/Widget.ProgressBar"/>

    <!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Hello World!"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--    </ScrollView>-->


</RelativeLayout>